welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: value lengtht is not a member of Array[Int]
for(i<- 0 to nums.lengtht-1){
                  ^